--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -2,8 +2,8 @@
 
 @cursor-color: rgb(30, 30, 8);
 
-@comment-ink: rgb(156, 162, 173);
-
+@comment-ink: rgb(156, 163, 176);
+@invisible-ink: rgb(178, 201, 227);
 @very-light-ink :rgb(110, 125, 170);
 @light-ink:      rgb(21, 82, 117);
 @ink:            rgb(3, 15, 62);
@@ -24,6 +24,7 @@
 
 @heftstreifen: #d0c8be;
 @heftstreifen-selected: darken(@heftstreifen, 30%);
+
 
 
 @paperwhite:  #f7f4ef;
